unpackaged/main/default/objects/litify_pm__Retainer__c/litify_pm__Retainer__c.object-meta.xml
<CustomObject>
    <description>Amount deposited for legal services.</description>
    <label>Retainer</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Retainer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>