unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount__c</fullName>
    <description>Amount retained.</description>
    <inlineHelpText>Enter retainer amount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>