unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <description>Matter related to Retainer.</description>
    <inlineHelpText>Enter Matter related to Retainer.</inlineHelpText>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>