unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Notes__c</fullName>
    <description>Notes related to Retainer</description>
    <inlineHelpText>Enter notes related to Retainer.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>