unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <type>Lookup</type>
</CustomField>