unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Retainer__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Retainer__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id, litify_pm__Matter__r.litify_pm__Client__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer</label>
    <type>Text</type>
</CustomField>