unpackaged/main/default/objects/litify_pm__Retainer__c/fields/litify_pm__Retainer_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Retainer_Date__c</fullName>
    <label>Retainer Date</label>
    <type>Date</type>
</CustomField>